--- a/client/src/app/modules/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/dashboard.component.html
@@ -39,6 +39,8 @@
           [quotationSearch]="quotationSearchOpen" [isForDashboard]="true"></quotation-list>
         <quotation-list class="dashboard-box-component" *ngIf="item==QUOTATION_TO_VERIFY"
           [quotationSearch]="quotationSearchToVerify" [isForDashboard]="true"></quotation-list>
+        <quotation-list class="dashboard-box-component" *ngIf="item==QUOTATION_REFUSED"
+          [quotationSearch]="quotationSearchRefused" [isForDashboard]="true"></quotation-list>
         <invoice-list class="dashboard-box-component" *ngIf="item==INVOICE_TO_ASSOCIATE"
           [invoiceSearch]="invoiceSearchToAssociate" [isForDashboard]="true"></invoice-list>
         <payment-list class="dashboard-box-component" *ngIf="item==PAYMENT_TO_ASSOCIATE"
